--- a/polysleep/Resources/Localizations/History/CalendarView.xcstrings
+++ b/polysleep/Resources/Localizations/History/CalendarView.xcstrings
@@ -1,6 +1,9 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
+    "weekday.%@" : {
+
+    },
     "weekday.fri" : {
       "comment" : "Label for Friday",
       "extractionState" : "stale",
