-MainScreen Supabase Add and Fetch
- isPremium

--- a/polysleep/Resources/Localizations/Profile.xcstrings
+++ b/polysleep/Resources/Localizations/Profile.xcstrings
@@ -375,6 +375,9 @@
         }
       }
     },
+    "notifications.time.before %@" : {
+
+    },
     "personalInfo.answers" : {
       "extractionState" : "manual",
       "localizations" : {
